--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,9 @@
     "name": "nexus_backend",
     "scripts": {
         "dev": "concurrently -n 'TS,JS' -c 'blue,yellow' -p [{name}] 'tsc --watch' 'nodemon --quiet ./dist/index.js'",
-        "build": "npm run build:frontend && npm i && tsc && node ./dist/index.js",
-        "build:frontend": "cd ../frontend && npm i && npm run build"
+        "build": "npm run build:frontend && npm i && tsc",
+        "build:frontend": "cd ../frontend && npm i && npm run build",
+        "start": "node ./dist/index.js"
     },
     "devDependencies": {
         "@types/node": "^22.7.7",
